Fix insufficient contrast in syntax highlighting (#26)

--- a/_sass/whiteglass/_base.scss
+++ b/_sass/whiteglass/_base.scss
@@ -154,7 +154,7 @@ code {
   font-size: 13px;
   border: 1px solid $grey-color-light;
   border-radius: 0;
-  background-color: lighten($grey-color-light, 5%);
+  background-color: #f8f8f8;
 }
 
 code {
